--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 	<title>Hello Spongebob!</title>
 </head>
 <body>
-<h1>Hello Patrick!</h1>
-<h2>He is my best friend.</h2>
+<h1>Hello Patrick!
+He is my best friend.</h1>
 </body>
 </html>
