--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>This is Bikini-Bottom.</title>
 </head>
 <body>
-<h1>Hello Spongebob.   Hello Patrick, روطچ اواح  ? </h1>>
+<h1>Hello Spongebob.   Hello Patrick, رحاوا چطور ? </h1>>
 </body>
 </html>
