--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>This is Bikini-Bottom.</title>
 </head>
 <body>
-<h1>Hello Spongebob.   Hello Patrick,  حاوا چطور  ا</h1>>
+<h1>Hello Spongebob.   Hello Patrick,   حاوا چطور ? </h1>
 </body>
 </html>
