--- a/c/index.html
+++ b/c/index.html
@@ -4,14 +4,15 @@
     <title>HTML is Structure Only (After)</title>
   </head>
   <body>
-    <h1 style="color: green; font-size: 60px; text-align: center;">HTML is Structure Only</h1>
-    <p style="margin: 0 100px 0 100px; font-size: 1.5em;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae temporibus esse suscipit nisi ad.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</p>
+    <h1 style="color: green; font-size: 60px; text-align: center;">Bikini Bottom</h1>
+    <p style="margin: 0 100px 0 100px; font-size: 1.5em;">Bikini Bottom is the main setting in the SpongeBob SquarePants series. It is an undersea city where SpongeBob and his friends live. According to Nickelodeon's program summary, Bikini Bottom is located in the Pacific Ocean, beneath Bikini Atoll in the Marshall Islands.</p>
+    <p>Location: Pacific Ocean</p>
+    <p>Industry: City</p>
     <footer>
       <hr>
       <p style="text-align: center;" 
          onclick="alert('EMAILING US IS USELESS');">
-         Tech Support: yeah.right@server-is-down.com
+         More information: https://en.wikipedia.org/wiki/SpongeBob_SquarePants
       </p>
     </footer>
   </body>
