--- a/city/index.html
+++ b/city/index.html
@@ -11,7 +11,7 @@
     <footer>
       <hr>
       <p style="text-align: center;" 
-         onclick="alert('EMAILING US IS USELESS');">
+         onclick="alert('فک کردی به این راحتی من برات لینک باز میکنم؟ ');">
          More information: https://en.wikipedia.org/wiki/SpongeBob_SquarePants
       </p>
     </footer>
