--- a/city/index.html
+++ b/city/index.html
@@ -7,12 +7,12 @@
     <h1 style="color: green; font-size: 60px; text-align: center;">Bikini Bottom</h1>
     <p style="margin: 0 100px 0 100px; font-size: 1.5em;">Bikini Bottom is the main setting in the SpongeBob SquarePants series. It is an undersea city where SpongeBob and his friends live. According to Nickelodeon's program summary, Bikini Bottom is located in the Pacific Ocean, beneath Bikini Atoll in the Marshall Islands.</p>
     <p>Location: Pacific Ocean</p>
-    <p>Industry: City</p>
+     <p>Industry: City</p>
     <footer>
       <hr>
       <p style="text-align: center;" 
-         onclick="alert('فتنبل . خودت برو سرچ کن. (معلومه بلد نیستم لینک خودش باز شو بزارم؟));">
-         More information: https://en.wikipedia.org/wiki/SpongeBob_SquarePants
+         onclick="alert('EMAILING US IS USELESS');">
+         Tech Support: yeah.right@server-is-down.com
       </p>
     </footer>
   </body>
