--- a/city/index.html
+++ b/city/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>HTML is Structure Only (After)</title>
+    <title>Bikin Bottom</title>
   </head>
   <body>
     <h1 style="color: green; font-size: 60px; text-align: center;">Bikini Bottom</h1>
