--- a/patrick/index.html
+++ b/patrick/index.html
@@ -5,7 +5,7 @@
     <title>Patrick Star</title>
   </head>
   <body>
-    <h1 style="color: green; font-size: 60px; text-align: center;">Patrick Star</h1>
+    <h1 style="color: pink; font-size: 60px; text-align: center;">Patrick Star</h1>
     <p style="margin: 0 100px 0 100px; font-size: 1.5em;">Patrick Star is a fictional character in the American animated television series SpongeBob SquarePants. He is voiced by actor Bill Fagerbakke and was created and designed by marine biologist and animator Stephen Hillenburg. He first appeared in the series' pilot episode "Help Wanted" on May 1, 1999.</p>
     <p>Personality: Patrick is pleasant, lazy, dim-witted, unmannerly, naïve, and generally ignorant. Despite being portrayed as a full-grown adult, Patrick acts very immature for his age and partakes in many childish activities with Spongebob.</p>
     <p>Voiced by: Bill Fagerbakke; Jack Gore</p>
