--- a/city/index.html
+++ b/city/index.html
@@ -4,7 +4,7 @@
     <title>Bikin Bottom</title>
   </head>
   <body>
-    <h1 style="color: green; font-size: 60px; text-align: center;">Bikini Bottom</h1>
+    <h1 style="color: blue; font-size: 60px; text-align: center;">Bikini Bottom</h1>
     <p style="margin: 0 100px 0 100px; font-size: 1.5em;">Bikini Bottom is the main setting in the SpongeBob SquarePants series. It is an undersea city where SpongeBob and his friends live. According to Nickelodeon's program summary, Bikini Bottom is located in the Pacific Ocean, beneath Bikini Atoll in the Marshall Islands.</p>
     <p>Location: Pacific Ocean</p>
      <p>Industry: City</p>
